@@ -21,6 +21,8 @@ Post v24.03.0
     MAC addresses configured on the LSP with "unknown", are learnt via the
     OVN native FDB.
   - Add support for ovsdb-server `--config-file` option in ovn-ctl.
+  - Added a new column in the southbound database "flow_desc" to provide
+    human readable context to flows.
 
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
